--- a/static/css/skeleton.css
+++ b/static/css/skeleton.css
@@ -225,6 +225,7 @@ input[type="button"].button-primary:focus {
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+input[type="date"],
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -242,6 +243,7 @@ select {
   box-shadow: none;
   box-sizing: border-box; }
 /* Removes awkward default styles on some inputs for iOS */
+input[type="date"],
 input[type="email"],
 input[type="number"],
 input[type="search"],
@@ -257,6 +259,7 @@ textarea {
   min-height: 65px;
   padding-top: 6px;
   padding-bottom: 6px; }
+  input[type="date"]:focus,
 input[type="email"]:focus,
 input[type="number"]:focus,
 input[type="search"]:focus,
