--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,22 +6,6 @@ button, select, .btn {
     cursor: pointer;
 }
 
-/* a, a:link, a:hover, a:active {
-    text-decoration: none;
-    color: #000;
-}
-
-a:hover {
-    border: 1px #000;
-}
-
-.btn {
-    border:outset 1px #bbbbbb; 
-    padding:2px;
-    background: #ddd;
-    text-align: center;
-} */
-
 .sign-up-page {
     width: 100%;
     height: 100%;
@@ -120,17 +104,64 @@ input {
 
 .student-form-container {
     width: 100%;
-    padding-top: 30px;
+    padding-top: 25px;
+    padding-left: 20px;
 }
 
 .submit-form-button {
     background-color: black;
     color: white;
     margin-left: 15px;
-    /* padding-left: 20px; */
 }
 
 .student-form {
     display: flex;
     justify-content: flex-start;
 }
+
+.student-table {
+    padding-top: 30px;
+    padding-left: 20px;
+}
+
+.student-table, td, th {
+    min-width: 110px;
+}
+
+.student-table th, .student-table td {
+    text-align: center;
+}
+
+.student-table tr:hover {
+    background: lightgrey;
+    cursor: pointer;
+    
+}
+
+.student-table button {
+    margin-right: 15px;
+    border: none;
+}
+
+.add-result {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    padding-top: 10px;
+}
+
+.add-result button {
+    border: none;
+}
+
+.add-result a {
+    color: slateblue;
+    font-weight: 1000;
+    font-size: 14px;
+}
+
+
+/* .student-table, td:first-child {
+    padding-left: 12px 15px !important;
+    text-align: left;
+} */
