--- a/templates/student.html
+++ b/templates/student.html
@@ -14,7 +14,7 @@
     <div class="sign-up-page">
         <div class="nav-bar">
             <div class="nav-heading">
-                <span>University Grade Submission</span>
+                <span><a href="/login">University Grade Submission</a></span>
             </div>
             <div class="error-messages">
             {% with messages = get_flashed_messages() %}
