--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <div class="sign-up-page">
         <div class="nav-bar">
             <div class="nav-heading">
-                <span>University Grade Submission</span>
+                <span><a href="/login">University Grade Submission</a></span>
             </div>
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
